Added auth and unified on jackson serde

--- a/resources/reference.conf
+++ b/resources/reference.conf
@@ -12,6 +12,6 @@ sightingdb {
   connector {
     class = "com.devo.sightingdb.storage.CheckpointingInMemoryConnector"
     path = "/tmp/sightingdb"
-    checkpointInterval = "1 hour"
+    checkpointIntervalSeconds = "3600" // 1 hour
   }
 }
