--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
-ktor_version=1.4.3
 kotlin.code.style=official
-kotlin_version=1.4.20
-logback_version=1.2.1
+org.gradle.configureondemand=true
+org.gradle.daemon=true
+org.gradle.parallel=true
+org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
